# modelferry

./: .gitattributes  .gitignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  RESOURCES.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Dockerfile.vhs  demo.md  demo.tape
scripts/: e2e_airgap.sh
src/modelferry/: __init__.py  cli.py  errors.py  hf.py  manifest.py  offline.py  pack.py  signing.py  verify_signature.py
tests/: _bundle.py  conftest.py  test_cli_skeleton.py  test_manifest_v2.py  test_offline_corruption.py  test_offline_manifest.py  test_offline_pathsafety.py  test_offline_roundtrip.py  test_offline_stdlib_lint.py  test_offline_unpack_hardening.py  test_offline_verify.py  test_pack_dest.py  test_pack_hardening.py  test_pack_integration.py  test_pack_signing.py  test_pack_writer.py  test_signing.py  test_verify_signature.py
