[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelferry"
version = "0.1.0"
description = "Pack Hugging Face models into chunked, hashed, self-verifying bundles for air-gapped transfer."
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "modelferry contributors" }]
keywords = ["huggingface", "air-gap", "offline", "sha256", "model-transfer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Archiving :: Packaging",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "huggingface_hub>=0.24",
]

[project.scripts]
modelferry = "modelferry.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modelferry"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

# offline.py runs on CPython 3.9 (RHEL 9 system Python) and is copied verbatim
# into every bundle. Pin ruff to 3.9 for that one file so it never suggests a
# 3.10+ idiom (e.g. PEP 604 `X | None`) that would break at runtime there.
[tool.ruff.per-file-target-version]
"src/modelferry/offline.py" = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

# Belt-and-suspenders alongside per-file-target-version: never let any pyupgrade
# rewrite touch the runtime-3.9 verifier, regardless of future imports.
[tool.ruff.lint.per-file-ignores]
"src/modelferry/offline.py" = ["UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "network: test requires network access (deselect with -m 'not network')",
]
